processed/jira/txt/LU/LU-15454.txt
Key:        LU-15454
Summary:    ldiskfs build failed int ldiskfs_ioctl_setproject(struct inode *inode, __u32 projid)
Link:       https://jira.whamcloud.com/browse/LU-15454
Type:       Bug
Priority:   Minor
Status:     Open
Resolution: Unresolved
Assignee:   WC Triage
Reporter:   Qian Yingjin
Created:    Mon, 17 Jan 2022 07:36:07 +0000
Updated:    Mon, 17 Jan 2022 07:56:11 +0000

--- Description ---
When build Lustre again CentOS-8, it reported the following errors:

CC [M]  /root/work/PCC/lustre-release/ldiskfs/ioctl.o
/root/work/PCC/lustre-release/ldiskfs/ioctl.c: In function 'ldiskfs_ioctl':
/root/work/PCC/lustre-release/ldiskfs/ioctl.c:1033:34: error: passing argument 1 of 'ldiskfs_ioctl_setproject' from incompatible pointer type [-Werror=incompatible-pointer-types]
   err = ldiskfs_ioctl_setproject(filp, fa.fsx_projid);
                                  ^~~~
/root/work/PCC/lustre-release/ldiskfs/ioctl.c:315:44: note: expected 'struct inode ' but argument is of type 'struct file '
 int ldiskfs_ioctl_setproject(struct inode *inode, __u32 projid)
                              ~~~~~~~~~~~~~^~~~
cc1: all warnings being treated as errors
make[5]: *** [scripts/Makefile.build:316: /root/work/PCC/lustre-release/ldiskfs/ioctl.o] Error 1
make[4]: *** [scripts/Makefile.build:556: /root/work/PCC/lustre-release/ldiskfs] Error 2
make[3]: *** [Makefile:1528: _module_/root/work/PCC/lustre-release] Error 2
make[3]: Leaving directory '/usr/src/kernels/4.18.0-80.el8.x86_64'

kernel 4db5c2e6236f82cf1aa408a53ae2890248059762
-static int ext4_ioctl_setproject(struct file *filp, __u32 projid)
+static int ext4_ioctl_setproject(struct inode *inode, __u32 projid)

$ git describe 4db5c2e6236f82cf1aa408a53ae2890248059762
v5.12-rc6-6-g4db5c2e6236f

It needs to patch the ldiskfs code to fix the build error.

--- Comment (bzzz, Mon, 17 Jan 2022 07:56:11 +0000) ---
I think you should update your kernel.
